--- a/templates/stats.html
+++ b/templates/stats.html
@@ -56,20 +56,13 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="../index.html" class="brand-link">
-      <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Online Ombor</span>
-    </a>
 
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-        </div>
         <div class="info">
-          <a href="#" class="d-block">Felix</a>
+          <a href="#" class="d-block">{{ombor.dokon_nomi}}</a>
         </div>
       </div>
 
@@ -127,6 +120,13 @@
             <div class="card-header border-0">
                 <div class="d-flex justify-content-between">
                   <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Statistika qo'shish</button>
+                 <form action="/stats/" method="get">
+                        <select name="qidirish">
+                            <option value="m">Mahsulot</option>
+                            <option value="c">Client</option>
+                        </select>
+                    <input name="soz" type="text"><button type="submit">Qidirish</button>
+                    </form>
                 </div>
             </div>
             <div class="card-body">
